[tool.poetry]
name = "symengine.github.io"
version = "0.1.0"
description = "Symengine Doxygen-Sphinx setup"
authors = ["Rohit Goswami <rgoswami@ieee.org>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
exhale = "^0.2.3"
breathe = "^4.20.0"
nbsphinx = "^0.7.1"
myst-nb = "^0.10.1"
sphinx-book-theme = "^0.0.36"
coverxygen = "^1.5.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
